src/css/main.css
body {
  margin: 0;
  color: #333;
  font-family: Helvetica, Arial, sans-serif;
  font-size:0.9em;
  background-color: #d0eaea;
}

#loading {
  position: absolute;
  left: 50%;
  top: 150px;
  z-index: 3;
}

#loading img {
  position: relative;
  left: -50%;
}

.top-row {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 5px 20px 5px 10px;
  border-bottom: 1px solid #d6c787;
  height: 28px;
}

.top-row>div {
  display: flex;
}

.top-row .tab {
  position: relative;
  left: 0px;
  top: 4px;
  width: 190px;
  height: 18px;
  text-align: center;
  padding: 6px 6px 6px 10px;
  border: 1px solid #777;
  border-bottom: 1px solid #fee9aa;
  border-radius: 10px 10px 0 0;
  box-shadow: 0px -5px 15px -5px #0b7277;
  background-color: #fee9aa;
  z-index: 3;
  font-weight: bold;
  font-size: 1.2em;
  margin-right: -8px;
  cursor: pointer;
}

.top-row .tab.inactive {
  z-index: 2;
  height: 16px;
  top: 6px;
  background-color: #f3da94;
  border-bottom: 1px solid #666;
  box-shadow: inset 0px -10px 10px 0px #d6bc73;
}

.right-panel-wrapper {
  width: 130%;
  padding: 20px 0 0 5px;
  position: relative;
}

.right-panel-wrapper .description {
  background-color: rgba(255,255,255,0.7);
}

.right-panel-wrapper>div {
  position: relative;
  width: 80%;
  min-width: 400px;
  height: 208px;
  margin-bottom: 10px;
}

.preview-image {
  position: absolute;
  top: 0px;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0
}
.preview-image:hover {
  opacity: 0.5
}
.preview-image:active {
  opacity: 1
}

.fade-appear {
  opacity: 0.01;
}

.fade-appear.fade-appear-active {
  opacity: 1;
  transition: opacity .8s ease-in;
}

.drawer-wrapper {
  background-color: #fee9aa;
}

.drawer {
  border-bottom: 1px solid #777;
  padding-bottom: 3px;
  box-shadow: 0px 5px 14px -5px #7e5f01;
  transition: height .5s;
  height: 0;
  overflow: hidden;
}

.drawer.open {
  height: 105px;
}

.drawer .drawer-contents {
  padding-top:5px;
}

.drawer-handle-wrapper {
  position: relative;
}

.drawer-handle {
  position: absolute;
  width: 112px;
  height: 3px;
  background-color: #fee9aa;
  z-index: 2;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  top: -1px;
  border: 1px solid #777;
  border-top: 1px solid #fee9aa;
  border-radius: 0 0 10px 10px;
  box-shadow: 0px 5px 14px -5px #7e5f01;
  padding: 6px;
}

.drawer-handle hr {
  margin: 3px 0;
}
.drawer-handle hr:first-child {
  margin-top: -7px;
}

.drawer .tips {
  display: flex;
  background-color: rgba(255,255,255,0.7);
  width: 1016px;
  display: flex;
  margin: 18px 0 0 37px;
  padding: 5px;
}

.drawer .tips .tips-title {
  align-self: center;
  font-weight: bold;
  padding: 0 20px 0 10px;
}

.tip-word {
  font-weight: bold;
}

button {
  border: 2px solid #fff;
  /*color: #fff;*/
  background: none;
  cursor: pointer;
  padding: 5px 16px;
  display: inline-block;
  margin: 3px 6px;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 700;
  outline: none;
  position: relative;
  transition: all 0.3s;
  box-sizing: border-box;
}

button:hover {
  color: #fee9aa;
  background: #fff;
}

.modal {
  background-color: white;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 680px;
  max-width: 100%;
  height: 700px;
  max-height: 100%;
  overflow: auto;
  padding: 20px 20px 0 20px;
  z-index: 1100;
  border: 5px solid #fee9aa;
}

.modal figure {
  clear: right;
  display: block;
  float: right;
  height: auto;
  margin: 0 0 20px 10px;
  width: 45%;
}
.modal figure img {
  border: solid 1px #ddd;
  height: auto;
  width: 100%;
}
.modal figcaption {
  font-size: 10px;
  margin-top: 5px;
}
.modal ul li {
  clear: left;
  margin-bottom: 5px;
}
table.help-key {
  border-collapse: collapse;
  border-top: solid 1px #ccc;
  border-right: solid 1px #ccc;
  font-size: .9em;
  margin: 10px 0;
  width: 100%;
}
table.help-key img {
  display: block;
  margin: auto;
}
table.help-key td, table.help-key th {
  border-bottom: solid 1px #ccc;
  border-left: solid 1px #ccc;
  padding: 5px;
  text-align: left;
  vertical-align: center;
}
table.help-key th {
  background: #fee9aa;
}

#modal-overlay {
  z-index: 1000;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);
}

.inline-icon {
  height: auto;
  margin: 0;
  padding: 0;
  width: 12px;
}

h1 {
  margin: -10 0 5 10;
  color: #3a878b;
  font-size: 1.5em;
  font-family: museo-slab,georgia,"times new roman",times,serif;
  font-weight: 700;
}

dl {
  border: 3px double #ccc;
  padding: 0.5em;
}
dt {
  color: #0b7277;
  display: inline;
  font-weight: bold;
}
dt:before {
  content: '';
  display: block;
  margin: 0 0 10px;
}
dt:after {
  content: ': ';
}
dd {
  display: block;
  margin: 10px 0 0;
}
dt + dd {
  display: inline;
  margin-top: 0;
}

ul {
  list-style: none;
  margin-left: 0;
  padding-left: 1em;
}

ul li {
  list-style: disc;
  padding: 3px;
}

.button-on-white {
  border-color: black;
}

button.button-on-white:hover {
  color: #fff;
  background: #ccc;
}

.button-narrow {
  padding: 0px 14px;
  margin: 4px 6px;
}

.concepts-report-help .concept-trait, .concepts-report-help .concept-location {
  margin-left: 10px;
}

#close-help {
  position: absolute;
  top: 10px;
  right: 10px;
}

.concept-popup {
  z-index: 3;
  background-color: #eee;
  border: 3px solid #444;
  border-radius: 5px;
  padding: 12px;
}

.concept-popup h1 {
  margin: 0 0 5 0;
  font-family: Helvetica, Arial, sans-serif;
  color: #0b7277;
  font-size: 1.2em;
  font-weight: 500;
}

.concept-popup .concept-trait, .concept-popup .concept-location {
  margin-left: 22px;
}

.concept-popup:before {
  content: "";
  position: absolute;
  top: -24px;
  left: 50%;
  margin-left: -20px;
  border-width: 12px;
  border-style: solid;
  border-color: transparent transparent #444 transparent;
}

.concept-popup-left:before {
  margin-left: -70px;
}

.concept-popup-right:before {
  margin-left: 30px;
}

.concept-popup-far-right:before {
  margin-left: 100px;
}

